Add ElasticSearch integration
Basic support/skeleton of:
* DataType/Field definitions
* Dynamic index mapping creation
* Search capability
* Aggregation capability

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,21 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'eclipse'
     apply plugin: 'idea'
-    
+
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
+
+    apply plugin: 'io.spring.dependency-management'
+
+    dependencyManagement {
+        imports {
+            mavenBom("org.springframework.boot:spring-boot-dependencies:2.0.5.RELEASE") {
+                bomProperty 'elasticsearch.version', '6.5.0'
+            }
+        }
+
+        dependencies {
+            dependency 'org.elasticsearch:elasticsearch:6.5.0'
+        }
+    }
 }
