--- a/libraries/anabik-ui/package.json
+++ b/libraries/anabik-ui/package.json
@@ -8,7 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "@coreui/coreui": "^2.1.0",
+    "@coreui/icons": "^0.3.0",
+    "@coreui/vue": "^2.0.2",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "flag-icon-css": "^3.2.1",
+    "font-awesome": "^4.7.0",
+    "simple-line-icons": "^2.4.1",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
@@ -17,6 +25,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "sass": "^1.15.1",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
