--- a/libraries/anabik-elasticsearch/build.gradle
+++ b/libraries/anabik-elasticsearch/build.gradle
@@ -2,6 +2,6 @@ dependencies {
     compile(project(':libraries:anabik-core'))
     compile('org.springframework.boot:spring-boot-starter')
     compile('org.springframework.boot:spring-boot-starter-actuator')
-    compile('org.elasticsearch.client:elasticsearch-rest-high-level-client:6.5.0')
+    compile('org.elasticsearch.client:elasticsearch-rest-high-level-client')
     compile('com.google.guava:guava:27.0-jre')
 }
