--- a/modules/build.gradle
+++ b/modules/build.gradle
@@ -4,7 +4,7 @@ subprojects {
     apply plugin: 'org.springframework.boot'
 
     dependencies {
-        compile "io.micrometer:micrometer-registry-elastic:1.1.0"
+        compile "io.micrometer:micrometer-registry-elastic"
         compile "org.springframework.boot:spring-boot-starter-actuator"
         compile "org.springframework.boot:spring-boot-starter-web"
         testCompile('org.springframework.boot:spring-boot-starter-test')
