--- a/libraries/anabik-ui/package.json
+++ b/libraries/anabik-ui/package.json
@@ -11,11 +11,14 @@
     "@coreui/coreui": "^2.1.0",
     "@coreui/icons": "^0.3.0",
     "@coreui/vue": "^2.0.2",
+    "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "flag-icon-css": "^3.2.1",
     "font-awesome": "^4.7.0",
+    "mini-toastr": "^0.8.1",
     "simple-line-icons": "^2.4.1",
     "vue": "^2.5.17",
+    "vue-notifications": "^0.9.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
